objects/ssot__Campaign__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualCostAmount__c</fullName>
        <label>Actual Cost Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdvertiserId__c</fullName>
        <label>Advertiser Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdvertiserName__c</fullName>
        <label>Advertiser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AgencyName__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetedCostAmount__c</fullName>
        <label>Budgeted Cost Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignBillingMethodDescription__c</fullName>
        <label>Campaign Billing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignEndDate__c</fullName>
        <label>Campaign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignGroup__c</fullName>
        <label>Campaign Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignMethod__c</fullName>
        <label>Campaign Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignStartDate__c</fullName>
        <label>Campaign Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignStatus__c</fullName>
        <label>Campaign Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignType__c</fullName>
        <label>Campaign Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedResponsePercent__c</fullName>
        <label>Expected Response Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedRevenueAmount__c</fullName>
        <label>Expected Revenue Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Campaign Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCampaignId__c</fullName>
        <label>Parent Campaign Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryGoalText__c</fullName>
        <label>Primary Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseCount__c</fullName>
        <label>Response Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalEmailsDeliveredCount__c</fullName>
        <label>Total Emails Delivered Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFormSubmissionCount__c</fullName>
        <label>Total Form Submission Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFormViewCount__c</fullName>
        <label>Total Form View Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLandingPageFormSbmsCount__c</fullName>
        <label>TotalLanding Page Form Submission Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLandingPageSbmsCount__c</fullName>
        <label>Total Landing Page Submission Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLandingPageViewCount__c</fullName>
        <label>Total Landing Page View Ct</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueEmailOpensCount__c</fullName>
        <label>Unique Email Opens Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueEmailTrackedLinkClickCount__c</fullName>
        <label>Unique Email Tracked Link Click Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueMarketingLinkClickCount__c</fullName>
        <label>Unique Marketing Link Click Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761211397_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign_ParentCampaignId_map_Campai_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>Campaign_ParentCampaignId_map_Campai_rel</relationshipLabel>
        <relationshipName>rel_1697761211397_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>